// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home.vue extracts a number and render as expected 1`] = `
<v-container-stub fluid="">
  <v-btn-stub class="my-2">Extract</v-btn-stub>
  <v-row-stub>
    <v-col-stub>
      <h1 class="current-number">
        Extracted: 12
      </h1>
    </v-col-stub>
  </v-row-stub>
  <displaynumbers-stub title="Available numbers" numbers="1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90"></displaynumbers-stub>
  <displaynumbers-stub title="Extracted numbers" numbers="12"></displaynumbers-stub>
</v-container-stub>
`;

exports[`Home.vue extracts a number and render as expected 2`] = `
<v-container-stub fluid="">
  <v-btn-stub class="my-2">Extract</v-btn-stub>
  <v-row-stub>
    <v-col-stub>
      <h1 class="current-number">
        Extracted: 89
      </h1>
    </v-col-stub>
  </v-row-stub>
  <displaynumbers-stub title="Available numbers" numbers="1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90"></displaynumbers-stub>
  <displaynumbers-stub title="Extracted numbers" numbers="12,89"></displaynumbers-stub>
</v-container-stub>
`;

exports[`Home.vue renders as expected 1`] = `
<v-container-stub fluid="">
  <v-btn-stub class="my-2">Extract</v-btn-stub>
  <v-row-stub>
    <v-col-stub>
      <h1 class="current-number">
        Extracted:
      </h1>
    </v-col-stub>
  </v-row-stub>
  <displaynumbers-stub title="Available numbers" numbers="1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90"></displaynumbers-stub>
  <displaynumbers-stub title="Extracted numbers" numbers=""></displaynumbers-stub>
</v-container-stub>
`;
